--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -1,10 +1,9 @@
 name: Java CI with Gradle
 
 on:
-  push:
-    branches: [ "master" ]
   pull_request:
-    branches: [ "master" ]
+    branches: [ "main" , "dev" ]
+
 
 permissions:
   contents: read
@@ -21,8 +20,13 @@ jobs:
         with:
           java-version: '17'
           distribution: 'temurin'
+
       - name: Run chmod to make gradlew executable
         run: chmod +x ./gradlew
+
+      - name: Test with Gradle
+        run: ./gradlew test
+
       - name: Build with Gradle
         uses: gradle/gradle-build-action@67421db6bd0bf253fb4bd25b31ebb98943c375e1
         with:
